--- a/PredLiga/PredLiga.Presentation/PredLiga.Presentation.csproj
+++ b/PredLiga/PredLiga.Presentation/PredLiga.Presentation.csproj
@@ -505,6 +505,7 @@
     <Content Include="Views\team.cshtml" />
     <Content Include="Views\league.cshtml" />
     <Content Include="Views\newLeague.cshtml" />
+    <Content Include="Views\juegos.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
